--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,13 @@ before_install:
 
 script:
  - docker run -e CI=true rraturi17/docker-react npm run test
+
+ deploy:
+   provider: elasticbeanstalk
+   region: "us-east-2"
+   app: "docker"
+   env: "Docker-env"
+   bucket_name: "elasticbeanstalk-us-east-2-414756524071"
+   bucket_path: "docker"
+   on:
+    branch: master 
